--- a/airlines_least_delay_new.ipynb
+++ b/airlines_least_delay_new.ipynb
@@ -53,7 +53,14 @@
         "colab_type": "text"
       },
       "source": [
-        "# HOMEWORK Part 1"
+        "# HOMEWORK Part 1\n",
+        "The least 6 mean arrival delays are of the following Airlines(ascending order) - HA, AS, VX, DL US, AA. Which makes HA (Hawaiian Airlines Inc.) as a clear preference.\n",
+        "Although, Considering the top 10 Airlines(in terms of number of flights > 10000) DL, US, AA have the least mean arrival time delay \n",
+        "Thus, **I choose DL (Delta Air Lines Inc.)** with \n",
+        "  **46468** fligths ,\n",
+        "  an **total** mean delay arrival time of *-3.246* \n",
+        "  and **positive** mean delay arrival time *24.12* \n",
+        "as the airline which is most likely to get you to your destination on time."
       ]
     },
     {
@@ -192,26 +199,90 @@
       "metadata": {
         "id": "cRtvCSEbV7_9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "3bdb8f24-33ec-48df-b17c-b9da87bd0818"
       },
       "source": [
-        "#carriers_arr_delay_total_mean"
+        "carriers_arr_delay_total_mean"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'9E': -0.26191337917722285,\n",
+              " 'AA': -3.9859601884796616,\n",
+              " 'AS': -11.878084179970973,\n",
+              " 'B6': 3.902175368779536,\n",
+              " 'DL': -3.24619092708961,\n",
+              " 'EV': 7.548857959334717,\n",
+              " 'F9': 9.932707355242567,\n",
+              " 'FL': 10.543859649122806,\n",
+              " 'HA': -11.608433734939759,\n",
+              " 'MQ': 5.816171332264562,\n",
+              " 'OO': 1.8148148148148149,\n",
+              " 'UA': -0.8054614169875264,\n",
+              " 'US': -0.47106972937023583,\n",
+              " 'VX': -5.178252032520326,\n",
+              " 'WN': 2.5223507076285814,\n",
+              " 'YV': 5.62962962962963}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "oqEUym97V_wE",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "8e4beb83-86c5-4e34-b6a9-26677dc616b3"
       },
       "source": [
-        "#carriers_arr_delay_positive_mean"
+        "carriers_arr_delay_positive_mean"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'9E': 31.617546709991878,\n",
+              " 'AA': 26.053971291866027,\n",
+              " 'AS': 25.677419354838708,\n",
+              " 'B6': 27.926539035742515,\n",
+              " 'DL': 24.12022674889429,\n",
+              " 'EV': 32.4912580517944,\n",
+              " 'F9': 27.36413043478261,\n",
+              " 'FL': 25.33646408839779,\n",
+              " 'HA': 16.53125,\n",
+              " 'MQ': 27.40188300932787,\n",
+              " 'OO': 38.625,\n",
+              " 'UA': 25.697387151581943,\n",
+              " 'US': 21.72515799381471,\n",
+              " 'VX': 24.422822822822823,\n",
+              " 'WN': 25.446305418719213,\n",
+              " 'YV': 32.63519313304721}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -288,16 +359,81 @@
       "metadata": {
         "id": "n0YvBN0Ia4kr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 289
+        },
+        "outputId": "b018686e-436c-423b-aa22-2480029d07c6"
       },
       "source": [
         "carriers_arr_delay_mean_of_pos_tot={}\n",
         "for carrier in carriers_arr_delay_total_mean: \n",
         "    carriers_arr_delay_mean_of_pos_tot[carrier]=(carriers_arr_delay_total_mean[carrier]+carriers_arr_delay_positive_mean[carrier]) / 2\n",
-        "#carriers_arr_delay_mean_of_pos_tot"
+        "carriers_arr_delay_mean_of_pos_tot\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'9E': 15.677816665407327,\n",
+              " 'AA': 11.034005551693182,\n",
+              " 'AS': 6.899667587433868,\n",
+              " 'B6': 15.914357202261025,\n",
+              " 'DL': 10.43701791090234,\n",
+              " 'EV': 20.020058005564557,\n",
+              " 'F9': 18.64841889501259,\n",
+              " 'FL': 17.9401618687603,\n",
+              " 'HA': 2.4614081325301207,\n",
+              " 'MQ': 16.609027170796217,\n",
+              " 'OO': 20.21990740740741,\n",
+              " 'UA': 12.445962867297208,\n",
+              " 'US': 10.627044132222238,\n",
+              " 'VX': 9.622285395151248,\n",
+              " 'WN': 13.984328063173898,\n",
+              " 'YV': 19.13241138133842}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uO1VbF4BvXZ5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "52330eb6-4f6d-475e-a6e3-10e732fb530f"
+      },
+      "source": [
+        "np.sort(list(carriers_arr_delay_mean_of_pos_tot.values()))"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2.46140813,  6.89966759,  9.6222854 , 10.43701791, 10.62704413,\n",
+              "       11.03400555, 12.44596287, 13.98432806, 15.67781667, 15.9143572 ,\n",
+              "       16.60902717, 17.94016187, 18.6484189 , 19.13241138, 20.02005801,\n",
+              "       20.21990741])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -505,14 +641,18 @@
       "metadata": {
         "id": "rn1JI82T18Y1",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 323
+        },
+        "outputId": "bfabbe23-9c08-48ff-c101-1c62dd781e18"
       },
       "source": [
         "# Extract top five airlines with most flights\n",
         "carrier_flights = pd.Series(flights.groupby('name')['name'].count())\n",
         "#print(carrier_flights)\n",
         "carrier_flights = carrier_flights.sort_values(ascending=False)\n",
-        "#print(carrier_flights)\n",
+        "print(carrier_flights)\n",
         "top_five = carrier_flights.index[:5]\n",
         "#print(top_five)\n",
         "\n",
@@ -520,8 +660,33 @@
         "top_five_flights = flights[flights['name'].isin(top_five)]\n",
         "#top_five_flights"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "name\n",
+            "United Air Lines Inc.          56359\n",
+            "JetBlue Airways                52267\n",
+            "ExpressJet Airlines Inc.       48641\n",
+            "Delta Air Lines Inc.           46468\n",
+            "American Airlines Inc.         31197\n",
+            "Envoy Air                      24327\n",
+            "US Airways Inc.                19547\n",
+            "Endeavor Air Inc.              16578\n",
+            "Southwest Airlines Co.         11588\n",
+            "Virgin America                  4920\n",
+            "AirTran Airways Corporation     3021\n",
+            "Alaska Airlines Inc.             689\n",
+            "Frontier Airlines Inc.           639\n",
+            "Mesa Airlines Inc.               513\n",
+            "Hawaiian Airlines Inc.           332\n",
+            "SkyWest Airlines Inc.             27\n",
+            "Name: name, dtype: int64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
