--- a/3-DataVisualization/3.2-TypesOfVisualization/Plotly Whirlwind Introduction-Extended.ipynb
+++ b/3-DataVisualization/3.2-TypesOfVisualization/Plotly Whirlwind Introduction-Extended.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open in Jupyter  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
