--- a/3-DataVisualization/3.2-TypesOfVisualization/Plotly Whirlwind Introduction-Extended.ipynb
+++ b/3-DataVisualization/3.2-TypesOfVisualization/Plotly Whirlwind Introduction-Extended.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Open in Jupyter  "
+    "## Open in Jupyter  OR \n",
+    "https://nbviewer.jupyter.org/github/Gurubux/Data-Lit/blob/master/3-DataVisualization/3.2-TypesOfVisualization/Plotly%20Whirlwind%20Introduction-Extended.ipynb"
    ]
   },
   {
