LassoAndRidgeRegression_Advertising_dataLit.ipynb

--- a/4-Regression/4.1RegressionMathematics/LassoAndRidgeRegression_Advertising_dataLit.ipynb
+++ b/4-Regression/4.1RegressionMathematics/LassoAndRidgeRegression_Advertising_dataLit.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "LassoAndRidgeRegression.ipynb",
+      "name": "LassoAndRidgeRegression_Advertising_dataLit.ipynb",
       "version": "0.3.2",
       "provenance": []
     },
@@ -60,7 +60,9 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "from google.colab import drive \n",
+        "drive.mount('/content/gdrive')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -80,11 +82,11 @@
       "metadata": {
         "id": "SbLVUHAC0E15",
         "colab_type": "code",
+        "outputId": "d427d167-e86b-411a-d63b-edb46d42a7d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "d427d167-e86b-411a-d63b-edb46d42a7d0"
+        }
       },
       "source": [
         "DATAPATH = 'https://raw.githubusercontent.com/llSourcell/ISL-Ridge-Lasso/master/data/Advertising.csv'\n",
@@ -92,7 +94,7 @@
         "data = pd.read_csv(DATAPATH)\n",
         "data.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,16 +204,16 @@
       "metadata": {
         "id": "6YtdG9pX0E2I",
         "colab_type": "code",
+        "outputId": "535ba061-4401-4458-aaf3-e836621cc5cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "535ba061-4401-4458-aaf3-e836621cc5cf"
+        }
       },
       "source": [
         "data.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -302,16 +304,16 @@
       "metadata": {
         "id": "XDXDc-sd0E2Q",
         "colab_type": "code",
+        "outputId": "75f1794d-f77c-48c7-e159-014f074486a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "75f1794d-f77c-48c7-e159-014f074486a9"
+        }
       },
       "source": [
         "data.columns"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,16 +356,16 @@
       "metadata": {
         "id": "T4UtnQKo0E2b",
         "colab_type": "code",
+        "outputId": "d7a8024c-b3a3-4a32-c289-9e04357359ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        },
-        "outputId": "d7a8024c-b3a3-4a32-c289-9e04357359ae"
+        }
       },
       "source": [
         "scatter_plot('TV', 'sales')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -384,16 +386,16 @@
       "metadata": {
         "id": "4C4SyEeR0E2h",
         "colab_type": "code",
+        "outputId": "07a0049a-9280-4d12-e985-7c36c5d1b7e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        },
-        "outputId": "07a0049a-9280-4d12-e985-7c36c5d1b7e8"
+        }
       },
       "source": [
         "scatter_plot('radio', 'sales')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -414,16 +416,16 @@
       "metadata": {
         "id": "z5lDNnkZ0E2n",
         "colab_type": "code",
+        "outputId": "824574d3-87fb-4b2d-ca59-c7b6e6c657c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 500
-        },
-        "outputId": "824574d3-87fb-4b2d-ca59-c7b6e6c657c4"
+        }
       },
       "source": [
         "scatter_plot('newspaper', 'sales')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -464,11 +466,11 @@
       "metadata": {
         "id": "owq94Qd-0E2v",
         "colab_type": "code",
+        "outputId": "71541553-1e7e-4a42-803a-f4caff15694d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "71541553-1e7e-4a42-803a-f4caff15694d"
+        }
       },
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -485,7 +487,7 @@
         "\n",
         "print(mean_MSE)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,11 +513,11 @@
       "metadata": {
         "id": "TMVeezpK0E22",
         "colab_type": "code",
+        "outputId": "cd60ab8c-4616-4f9b-a1f6-19386a3e6e60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "cd60ab8c-4616-4f9b-a1f6-19386a3e6e60"
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
@@ -531,7 +533,7 @@
         "\n",
         "ridge_regressor.fit(Xs, y)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,16 +562,16 @@
       "metadata": {
         "id": "45Qmf6qf0E27",
         "colab_type": "code",
+        "outputId": "f7d82ba7-cdd6-4515-de29-d1929ec89804",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f7d82ba7-cdd6-4515-de29-d1929ec89804"
+        }
       },
       "source": [
         "ridge_regressor.best_params_"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,16 +592,16 @@
       "metadata": {
         "id": "0UYHWPet0E3B",
         "colab_type": "code",
+        "outputId": "c7f3b992-6090-4d21-e516-9ad81c51f25a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c7f3b992-6090-4d21-e516-9ad81c51f25a"
+        }
       },
       "source": [
         "ridge_regressor.best_score_"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,11 +632,11 @@
       "metadata": {
         "id": "BwUR59Ii0E3K",
         "colab_type": "code",
+        "outputId": "6599d966-29f8-442a-b54e-70c4037118cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        },
-        "outputId": "6599d966-29f8-442a-b54e-70c4037118cd"
+        }
       },
       "source": [
         "from sklearn.linear_model import Lasso\n",
@@ -647,7 +649,7 @@
         "\n",
         "lasso_regressor.fit(Xs, y)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,16 +689,16 @@
       "metadata": {
         "id": "dgBvRaDd0E3Q",
         "colab_type": "code",
+        "outputId": "967b2ace-89dc-459c-c828-6decb039be4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "967b2ace-89dc-459c-c828-6decb039be4e"
+        }
       },
       "source": [
         "lasso_regressor.best_params_"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,16 +719,16 @@
       "metadata": {
         "id": "YRWoanKL0E3W",
         "colab_type": "code",
+        "outputId": "ba288971-a621-453f-a3d8-2ab5c84c860b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ba288971-a621-453f-a3d8-2ab5c84c860b"
+        }
       },
       "source": [
         "lasso_regressor.best_score_"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
