--- a/4-Regression/4.2LinearRegressionInPythonTutorial/LinearRegression_automobile_dataLit.ipynb
+++ b/4-Regression/4.2LinearRegressionInPythonTutorial/LinearRegression_automobile_dataLit.ipynb
@@ -27,6 +27,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qMQhrCGNM7Jm",
+        "colab_type": "text"
+      },
+      "source": [
+        "https://www.kaggle.com/colinskow/linear-regression-automobile-tutorial-data-lit"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -55,7 +65,7 @@
         "\n",
         "# Any results you write to the current directory are saved as output.\n",
         "from google.colab import drive \n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount('/content/gdrive')\n"
       ],
       "execution_count": 8,
       "outputs": [
